--- a/resources/css/menu.css
+++ b/resources/css/menu.css
@@ -1,5 +1,5 @@
 .container-options {
-    width: 330px;
+    width: fit-content;
     background-color: #faf9f9;
     border-radius: 10px;
     padding: 10px 5px;
