--- a/resources/css/balances.css
+++ b/resources/css/balances.css
@@ -3,7 +3,7 @@
     justify-content: center;
     gap: 5px;
     width: 330px;
-    background-color: #faf9f9;
+    background-color: var(--color-white);
     border-radius: 10px;
     padding: 40px 5px;
     margin: 20px 10px;
