--- a/resources/css/global.css
+++ b/resources/css/global.css
@@ -2,13 +2,13 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    color: #282C34;
+    color: var(--color-black-blue);
     font-family: "Poppins", sans-serif;
     font-size: 14px;
 }
 
 body {
-    background-color: #f4f3ee;
+    background-color: var(--color-white);
 }
 
 main {
@@ -125,20 +125,20 @@ ul {
     width: fit-content;
     padding: 15px;
     border-radius: 5px;
-    background-color: #faf9f9;
+    background-color: var(--color-white);
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
 }
 
 .alert-notice {
-    background-color: #faf9f9;
+    background-color: var(--color-white);
 }
 
 .categorie-expenses {
-    color: #ef233c;
+    color: var(--color-red);
 }
 
 .categorie-revenues {
-    color: #0077b6;
+    color: var(--color-light-blue);
 }
 
 .categorie-expenses,
@@ -164,5 +164,5 @@ ul {
 .pagination .page-item .page-link {
     font-size: 1.3rem;
     font-weight: 600;
-    color: var(--arrow-color);
+    color: var(--color-black-blue);
 }
