--- a/resources/css/menu.css
+++ b/resources/css/menu.css
@@ -1,6 +1,6 @@
 .container-options {
     width: fit-content;
-    background-color: #faf9f9;
+    background-color: var(--color-white);
     border-radius: 10px;
     padding: 10px 5px;
     margin: 20px 10px;
@@ -18,6 +18,6 @@
 .menu-list a i:hover,
 .menu-list li a:hover,
 .menu-list li a i:hover {
-    color: #219ebc;
+    color: var(--color-light-blue);
     transition: all 0.3s ease;
 }
